# DistroAV

./: .clang-format  .formatignore  .gersemirc  .gitignore  .travis.yml  AGENTS.md  Build.sh  CMakeLists.txt  CMakePresets.json  Clean.sh  Config.cpp  Config.h  Format.sh  InstallDistroAV.sh  InstallOBS-NDI.sh  NDI AUDIO  Package.sh  README.md  RunOBS.cmd  RunOBS.sh  Sha256s.sh  UninstallDistroAV.sh  UninstallOBS-NDI.cmd  UninstallOBS-NDI.sh  agents-simple.md  agents.md  appveyor.yml  azure-pipelines.yml  buildspec.json  crowdin.yml  libobs.patch  obs-ndi-filter.cpp  obs-ndi-output.cpp  obs-ndi-source.cpp  obs-ndi.cpp  obs-ndi.h
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug.yml  2_feature.yml  3_support.yml  9_blank.yml  BUG.md  BUG.yml
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml  action.yml
.github/actions/run-clang-format/: action.yaml
.github/actions/setup-macos-codesigning/: action.yaml
.github/scripts/: .Aptfile  .Wingetfile  .build.zsh  Build-Windows.ps1  Package-Windows.ps1  av-sync-jump-test.sh  check-format.sh  ndi-sync-test.sh  ndi-toggle-test.sh  obs-restart-sync-test.sh  sync-log-regression-test.sh
.github/scripts/utils.zsh/: check_packages  setup_ubuntu
.github/workflows/: build-project.yaml  check-format.yaml  dev-ci-cd.yaml  main.yml  ndi-sync-test.yaml  pr-pull.yaml  push.yaml  update-winget.yaml
CI/: before-deploy-osx.sh  before-script-osx.sh  build-macos.sh  build-xenial.sh  create-libndi-deb.sh  create-libndi-dev-deb.sh  install-build-obs-macos.sh  install-build-obs.cmd  install-dependencies-macos.sh  install-dependencies-osx.sh  install-dependencies-xenial.sh  libfirebase-get.ps1  libfirebase-get.sh  libndi-create-deb.sh  libndi-create-dev-deb.sh  libndi-get.sh  libndi-package.sh  package-macos.sh  package-ubuntu.sh  package-windows.cmd  package-xenial.sh  prepare-slobs-package.cmd  prepare-windows.cmd
CI/macos/: qt.rb
assets/: distroav-brand-guidelines.md
build-aux/: .run-format.zsh  postinstall  win-copy-2-obs.cmd  wsl.zsh
build_linux-x86_64/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  install_manifest_obs_rundir.txt
build_linux-x86_64/obs-ndi_autogen/: moc_predefs.h  mocs_compilation.cpp
build_linux-x86_64/obs-ndi_autogen/GYHPFG4CL2/: moc_SettingsDialog.cpp  qrc_resources.cpp
build_linux-x86_64/obs-ndi_autogen/include/: ui_SettingsDialog.h
cmake/: ObsPluginHelpers.cmake
cmake/bundle/windows/: installer-Windows.iss.in
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  helpers_common.cmake  osconfig.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/macos/resources/: create-package.cmake.in  postinstall
cmake/windows/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/windows/resources/: installer-Windows.iss.in  resource.rc.in
data/locale/: ca-ES.ini  de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  hu-HU.ini  ko-KR.ini  ms-MY.ini  nl-NL.ini  pr-br.ini  pt-BR.ini  ro-RO.ini  ru-RU.ini  sv-SE.ini  uk-UA.ini  zh-CN.ini
forms/: output-settings.cpp  output-settings.h  output-settings.ui
installer/: installer-windows.iss.in  installer.iss  obs-ndi.pkgproj  osx-install-ndi-runtime.sh
installer/idp/: COPYING.txt  idp.iss
lib/ndi/: .clang-format  Processing.NDI.AVSync.h  Processing.NDI.Advanced.h  Processing.NDI.DynamicLoad.h  Processing.NDI.Embedded.h  Processing.NDI.Find.h  Processing.NDI.FrameSync.h  Processing.NDI.Genlock.h  Processing.NDI.KVM.h  Processing.NDI.Lib.cplusplus.h  Processing.NDI.Lib.h  Processing.NDI.Recv.ex.h  Processing.NDI.Recv.h  Processing.NDI.RecvAdvertiser.h  Processing.NDI.RecvListener.h  Processing.NDI.Routing.h  Processing.NDI.Send.h  Processing.NDI.SendAdvertiser.h  Processing.NDI.SendListener.h  Processing.NDI.compat.h  Processing.NDI.deprecated.h  Processing.NDI.structs.h  Processing.NDI.utilities.h  Version.txt
runtime/: libndi-get.sh
src/: Config.cpp  Config.h  PreviewSceneChangedWatcher.cpp  PreviewSceneChangedWatcher.h  UpdateDialog.cpp  UpdateDialog.h  aux-output.cpp  aux-output.h  cloud.cpp  cloud.h  config.cpp  config.h  input-utils.cpp  input.cpp  input.h  main-output.cpp  main-output.h  ndi-filter.cpp  ndi-finder.cpp  ndi-finder.h  ndi-output.cpp  ndi-server.cpp  ndi-shared.h  ndi-source-finder.cpp  ndi-source-finder.h  ndi-source.cpp  ndi-utils.cpp  ndi-utils.h  obs-ndi-config.cpp  obs-ndi-config.h  obs-ndi-filter.cpp  obs-ndi-input-utils.cpp  obs-ndi-input.cpp  obs-ndi-input.h  obs-ndi-macros.h.in  obs-ndi-output.cpp  obs-ndi-output.h  obs-ndi-source-helpers.cpp  obs-ndi-source-helpers.h  obs-ndi-source.cpp  (+22 more)
src/core/: transport.cpp  transport.hpp  transport_factory.hpp
src/forms/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  dock-compat.cpp  dock-compat.hpp  ndi-settings.cpp  ndi-settings.h  ndi-settings.ui  obsndi-update.cpp  obsndi-update.h  obsndi-update.ui  output-settings.cpp  output-settings.h  output-settings.ui  resources.qrc  sync-test-dock.cpp  sync-test-dock.hpp  update.cpp  update.h  update.ui
src/obs-support/: curl-helper.h  obs-app.cpp  obs-app.h  obs-app.hpp  obs-source-preview.cpp  obs-source-preview.h  obs-source-tally.cpp  obs-source-tally.h  qt_wrapper.hpp  remote-text.cpp  remote-text.hpp  shared-update.cpp  shared-update.h  shared-update.hpp  sync-debug.cpp  sync-debug.h
src/tests/: test-sync-timestamps.cpp
tools/: Build-macOS.sh  Build.sh  Format.sh  InstallDistroAV-macOS.sh  InstallDistroAV.sh  LogsOBS-macOS.sh  Package-macOS.sh  RunOBS-macOS.sh  RunOBS.cmd  Sha256s.sh  UninstallDistroAV.sh  build-helper-macos.sh  build-helper-windows.ps1  build-install-run-windows.ps1  clean-builds-deps.sh  install-macos.sh  install-windows.ps1  run-obs-debug-macos.sh  run-obs-debug-windows.cmd  sha256-check.sh  test-build-macos.sh
(+59 files in other folders)
